--- a/index.html
+++ b/index.html
@@ -56,33 +56,48 @@
 
           <!-- project items -->
           <li class="list-item">
-            <div class="icons">
-              <button class="icon_btn" title="edit" aria-label="Edit project">
-                <i class="fas fa-pencil-alt edit_icon" aria-hidden="true"></i>
+            <div class="icons-extended">
+              <button class="icon_btn" title="team" aria-label="team number">
+                <i class="fas fa-user-friends" aria-hidden="true"></i>
+                <span>3</span>
               </button>
-              <button
-                class="icon_btn"
-                title="delete"
-                aria-label="Delete project"
-              >
-                <i class="fas fa-trash-alt delete_icon" aria-hidden="true"></i>
-              </button>
-              <button
-                class="icon_btn"
-                title="favourite"
-                aria-label="Favourite project"
-              >
-                <i class="far fa-star star_icon" aria-hidden="true"></i>
-              </button>
+              <div class="icons">
+                <button class="icon_btn" title="edit" aria-label="Edit project">
+                  <i class="fas fa-pencil-alt edit_icon" aria-hidden="true"></i>
+                </button>
+                <button
+                  class="icon_btn"
+                  title="delete"
+                  aria-label="Delete project"
+                >
+                  <i
+                    class="fas fa-trash-alt delete_icon"
+                    aria-hidden="true"
+                  ></i>
+                </button>
+                <button
+                  class="icon_btn"
+                  title="favourite"
+                  aria-label="Favourite project"
+                >
+                  <i class="far fa-star star_icon" aria-hidden="true"></i>
+                </button>
+              </div>
             </div>
+
+            <ul class="props">
+              <li>
+                <p>Updated 4 days ago by Michelangelo</p>
+              </li>
+            </ul>
             <footer>
-              <a href="">First Project</a>
+              <a href="" class="title">First longer Project name</a>
             </footer>
           </li>
 
           <li class="list-item">
             <header>
-              <a href="">Second Project</a>
+              <a href="" class="title">Second Project</a>
               <button
                 class="icon_btn"
                 title="favourite"
@@ -91,6 +106,17 @@
                 <i class="far fa-star star_icon" aria-hidden="true"></i>
               </button>
             </header>
+            <ul class="props">
+              <li>
+                <p>Updated 4 days ago</p>
+              </li>
+              <li>
+                <p>Item two</p>
+              </li>
+              <li>
+                <p>Item three</p>
+              </li>
+            </ul>
             <div class="icons">
               <button class="icon_btn" title="edit" aria-label="Edit project">
                 <i class="fas fa-pencil-alt edit_icon" aria-hidden="true"></i>
@@ -106,8 +132,45 @@
           </li>
 
           <li class="list-item">
+            <div class="icons">
+              <button class="icon_btn" title="edit" aria-label="Edit project">
+                <i class="fas fa-pencil-alt edit_icon" aria-hidden="true"></i>
+              </button>
+              <button
+                class="icon_btn"
+                title="delete"
+                aria-label="Delete project"
+              >
+                <i class="fas fa-trash-alt delete_icon" aria-hidden="true"></i>
+              </button>
+              <button
+                class="icon_btn"
+                title="favourite"
+                aria-label="Favourite project"
+              >
+                <i class="far fa-star star_icon" aria-hidden="true"></i>
+              </button>
+            </div>
+
+            <ul class="props">
+              <li>
+                <p>Updated 4 days ago</p>
+              </li>
+              <li>
+                <p>Item two</p>
+              </li>
+              <li>
+                <p>Item three</p>
+              </li>
+            </ul>
+            <footer>
+              <a href="" class="title">Third Project</a>
+            </footer>
+          </li>
+
+          <li class="list-item">
             <header>
-              <a href="">Third Project</a>
+              <a href="" class="title">Fourth longer Project name</a>
               <button
                 class="icon_btn"
                 title="favourite"
@@ -116,6 +179,11 @@
                 <i class="far fa-star star_icon" aria-hidden="true"></i>
               </button>
             </header>
+            <ul class="props">
+              <li>
+                <p>Updated 4 days ago by Mats</p>
+              </li>
+            </ul>
             <div class="icons">
               <button class="icon_btn" title="edit" aria-label="Edit project">
                 <i class="fas fa-pencil-alt edit_icon" aria-hidden="true"></i>
